TASK: Allow rum-collector in CSP

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none' ; style-src 'self' ; font-src https://fonts.gstatic.com https://cdnjs.cloudflare.com ; script-src 'self' http://piwik.simplyadmire.com http://rum-static.pingdom.net https://code.jquery.com https://cdnjs.cloudflare.com ; img-src 'self' ;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none' ; style-src 'self' ; font-src https://fonts.gstatic.com https://cdnjs.cloudflare.com ; script-src 'self' http://piwik.simplyadmire.com http://rum-static.pingdom.net http://rum-collector-2.pingdom.net https://code.jquery.com https://cdnjs.cloudflare.com ; img-src 'self' ;">
 
     <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
