--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="en">
 <head>
     <title>
         {% if page.title == "Home" %}
@@ -8,20 +8,20 @@
         {{ page.title }} &middot; {{ site.title }}
         {% endif %}
     </title>
-    <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" />
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none' ; style-src 'self' ; font-src https://fonts.gstatic.com https://cdnjs.cloudflare.com ; script-src 'self' http://piwik.simplyadmire.com http://rum-static.pingdom.net https://code.jquery.com https://cdnjs.cloudflare.com ; img-src 'self' http://piwik.simplyadmire.com ; connect-src http://rum-collector-2.pingdom.net ;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none' ; style-src 'self' http://squizlabs.github.io ; font-src https://fonts.googleapis.com https://fonts.gstatic.com https://cdnjs.cloudflare.com ; script-src 'self' http://squizlabs.github.io http://piwik.simplyadmire.com http://rum-static.pingdom.net https://code.jquery.com https://cdnjs.cloudflare.com ; img-src 'self' http://squizlabs.github.io http://piwik.simplyadmire.com ; connect-src http://rum-collector-2.pingdom.net ;" />
 
-    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
     <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml" />
 </head>
 <body>
