--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 <h1 class="page-title deep-orange-text text-darken-4">{{ page.title }}</h1>
-{{ content }}
+<section class="page-content">
+    {{ content }}
+</section>
