--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,7 @@
     margin-bottom: 4em;
 }
 
-.article-content,
+.card .card-content .article-content,
 .page-content {
     font-size: 1.5em;
     ul {
@@ -38,5 +38,8 @@
     h4 {
         font-weight: bold;
     }
-}
 
+    p {
+        margin-bottom: 1.5em;
+    }
+}
