ui: Add tag cloud

--- a/src/partials/global/Footer.html
+++ b/src/partials/global/Footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-800" aria-labelledby="footer-heading">
+<footer class="bg-zinc-800" aria-labelledby="footer-heading">
     <div class="py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
         <div class="text-sm text-gray-400 space-y-1.5" vocab="https://schema.org/" typeof="Organization">
             <div property="name">Rens Admiraal BV</div>
