content: Update IBAN

--- a/src/partials/global/Footer.html
+++ b/src/partials/global/Footer.html
@@ -8,7 +8,7 @@
             </div>
             <div property="identifier">69908265</div>
             <div property="vatID">NL858061491B01</div>
-            <div property="iban">NL08BUNQ2043860828</div>
+            <div property="iban">NL69 RABO 0189 4311 80</div>
         </div>
 
         <div class="mt-8 border-t border-gray-700 pt-8 md:flex md:items-center md:justify-between">
